--- a/src/app/pages/e-commerce/performance-nc/performance-nc.component.html
+++ b/src/app/pages/e-commerce/performance-nc/performance-nc.component.html
@@ -23,7 +23,7 @@
           <div class="label">{{pourcentageCC}} %</div>
         </div>
       </div>
-      <div class="sub-card small-card" style="background-color:#b0f794ba">
+      <div class="sub-card small-card" style="background-color:#b0f794ba" *ngIf="selectedUnite!=null">
         <div class="icon nb-sunny-circled"></div>
         <div class="text">
           <div class="number">Lead Time</div>
