--- a/src/app/pages/e-commerce/performance-ps/performance-ps.component.html
+++ b/src/app/pages/e-commerce/performance-ps/performance-ps.component.html
@@ -17,7 +17,7 @@
           <div class="label">{{PourcentageprocedeC}} %</div>
         </div>
       </div>
-      <div class="sub-card small-card" style="background-color: #f2bd5be9;">
+      <div class="sub-card small-card" style="background-color: #FFA005;">
         <div class="icon nb-alert"></div>
         <div class="text">
           <div class="number">{{nbprocedeAR}} PS</div>
