--- a/src/app/pages/Add/procede-detail/procede-detail.component.html
+++ b/src/app/pages/Add/procede-detail/procede-detail.component.html
@@ -6,8 +6,8 @@
   <div class="middle">
       <h6 class="orange-text mb-3" style="font-size: small;text-align: center;color: orange;">C2 - Confidential</h6>
      <div style="flex-direction: row ;padding: 20px;">
-       <img src="../assets/images/safran.jpg" width="100"height="80" style="margin-right: 350px;">
-        <label  style="line-height: 0.5; font-family: 'Times New Roman', Times, serif;">Date MAJ , le {{dateAjour}}</label>
+       <img src="../assets/images/safran.jpg" width="100"height="80" >
+        <label  style="line-height: 0.5; font-family: 'Times New Roman', Times, serif;float: right;">Date MAJ , le {{dateAjour}}</label>
     </div>
      
   </div>
