--- a/src/app/pages/ProcedeDetail/detail/detail.component.html
+++ b/src/app/pages/ProcedeDetail/detail/detail.component.html
@@ -80,6 +80,9 @@
           <button nbButton status="info" hero (click)="download(currentProcede.id)"
               style="margin-left: auto;margin-left: auto;float: right; margin: 5px;"><i class="fa-solid fa-download"
               style="margin-right: 5px;"></i>Telecharger Documents</button>
+              <button nbButton status="primary" hero (click)="HistoriquePS(historique,currentProcede.id )"
+              style="margin-left: auto;margin-left: auto;float: left; margin: 5px;"><i class="fa-solid fa-box-archive"
+              style="margin-right: 5px;"></i>Historique PS</button>
         </ng-container>
 
       </div>
@@ -216,5 +219,21 @@
 
   </nb-card>
 
+</ng-template>
+
+<ng-template #historique let-data let-ref="dialogRef">
+
+  <nb-card class="col-12 " style="width: 800px;">
+
+    <nb-card-body>
+      <h4 style="text-align: center;color: rgb(23, 9, 176);">Historique Procede</h4>
+         
+  
+      <ng2-smart-table [settings]="SettingsHistorique" [source]="sourceHistorique"  ></ng2-smart-table>  
+      <div class="text-center">
+          <button nbButton   status="danger" hero style="margin: 20px; text-align: center;"(click)="ref.close()" >Annuler</button>
+       </div>
+    </nb-card-body>
+  </nb-card>
 </ng-template>
 <br>
