--- a/src/app/pages/e-commerce/e-commerce.component.html
+++ b/src/app/pages/e-commerce/e-commerce.component.html
@@ -1,43 +1,67 @@
 <ngx-show-data ></ngx-show-data>
 
 <div>
-  <!-- <div class="row">
+  <div class="row" style="display: flex;text-align: center;justify-content: center;">
     <div class="col-6 d-flex" >
-      <i class="fa-solid fa-location-dot" style="margin-right: 3px;font-size: 25px;"></i>
-      <select class="select-Label"  placeholder="Sélectionnez un Site" id="site" [(ngModel)]="selectedSite"  (ngModelChange)="loadUnite()" #site="ngModel" name="site">
-        <option [ngValue]="null">Sélectionnez un Site</option>
+      <label style=" font-size: 14px; display: flex;align-items: center;justify-content: center; border-radius: 25px 0 0 25px;width: 190px;
+      height: 40px; border: none;"><i class="fa-solid fa-location-dot" style="margin-right: 3px;font-size: 25px;"></i>Choisir Un Site</label>
+      <select class="select-Label" style=" font-size: 14px; box-sizing: border-box;background: #fffefe;width: 400px;height: 40px;border: 1px solid rgba(18, 142, 213, 0.79);outline: none;padding: 0 25px;border-radius: 15px 15px 15px 15px;" 
+       placeholder="Sélectionnez un Site" id="site" [(ngModel)]="selectedSite"  (ngModelChange)="loadUnite()" #site="ngModel" name="site">
+        <option [ngValue]="null">All</option>
         <option *ngFor="let site of listeSite" [ngValue]="site.id">{{ site.nom }}</option>
       </select>
     </div>
   
     <div class="col-6  d-flex">
-     <i class="fa-solid fa-gears" style="margin-right: 3px;font-size: 25px;"></i>
-      <select class="select-Label" id="unite" [(ngModel)]="selectedUnite" (ngModelChange)="loadProcedes()" #unite="ngModel" name="unite">
-        <option [ngValue]="null">Sélectionnez Une Unité Opérationnel</option>
+      <label style=" font-size: 14px; display: flex;align-items: center;justify-content: center; border-radius: 25px 0 0 25px;width: 190px;
+      height: 40px; border: none;"> <i class="fa-solid fa-gears" style="margin-right: 3px;font-size: 25px;"></i>Choisir Une U.O</label>
+      <select class="select-Label"style="font-size: 14px; box-sizing: border-box;background: #fffefe;width: 400px;height: 40px;border:  1px solid rgba(18, 142, 213, 0.79);outline: none;padding: 0 25px;border-radius: 15px 15px 15px 15px;" 
+      id="unite" [(ngModel)]="selectedUnite" (ngModelChange)="loadData()" #unite="ngModel" name="unite">
+        <option [ngValue]="null" disabled selected hidden>All</option>
         <option *ngFor="let unite of listeUnit" [ngValue]="unite.id">{{ unite.ref }} ~ {{ unite.nom }}</option>
       </select>
     </div>
-  </div> -->
+  </div>
 
 
   <!-- affichage data  -->
-  <div class="row">
-    <div class="col-12">
-      <ngx-performance-ps></ngx-performance-ps>
+  <ng-container *ngIf="!show">
+    <div class="row">
+      <div class="col-12">
+        <ngx-performance-ps ></ngx-performance-ps>
+      </div>
+      <div class="col-12">
+        <ngx-performance-nc></ngx-performance-nc>
+      </div>
+    
     </div>
-    <div class="col-12">
-      <ngx-performance-nc></ngx-performance-nc>
+    <div class="row">
+      <div class="col-12">
+        <ngx-performance-op></ngx-performance-op>
+      </div>
     </div>
-  
-  </div>
-  
-  
-  
-  
-  <div class="row">
-    <div class="col-12">
-      <ngx-performance-op></ngx-performance-op>
+  </ng-container> 
+  <ng-container *ngIf="show">
+    <div class="row">
+      <div class="col-12">
+        <ngx-performance-ps [selectedUnite]="selectedUnite" [selectedSite]="selectedSite" ></ngx-performance-ps>
+      </div>
+      <div class="col-12">
+        <ngx-performance-nc [selectedUnite]="selectedUnite" [selectedSite]="selectedSite"></ngx-performance-nc>
+      </div>
+    
     </div>
-  </div>
+    <div class="row">
+      <div class="col-12">
+        <ngx-performance-op [selectedUnite]="selectedUnite" [selectedSite]="selectedSite" ></ngx-performance-op>
+      </div>
+    </div>
+  </ng-container> 
+ 
+  
+  
+  
+  
+
 </div>
 
