--- a/src/app/pages/e-commerce/show-data/show-data.component.html
+++ b/src/app/pages/e-commerce/show-data/show-data.component.html
@@ -354,7 +354,7 @@
           <button nbButton status="danger" outline (click)="exportCCToExcel(carte.id)" style="margin-left: auto;"><i class="fas fa-file-export" style="margin-right: 5px;"></i>Exporter</button>
         </nb-card-header>
         <nb-card-body>
-          <ng2-smart-table  [settings]="SettingsMesure" [source]="sourceMesure"></ng2-smart-table>
+          <ng2-smart-table  style="zoom: 0.8;"   [settings]="SettingsMesure" [source]="sourceMesure"></ng2-smart-table>
         </nb-card-body>
 
       </nb-card>
@@ -642,7 +642,7 @@
             <button nbButton status="danger" outline (click)="exportOKDToExcel(okd.id)" style="margin-left: auto;"><i class="fas fa-file-export" style="margin-right: 5px;"></i>Exporter</button>
           </nb-card-header>
           <nb-card-body>
-            <ng2-smart-table [settings]="SettingsMesureOKD" [source]="sourceMesureOKD"></ng2-smart-table>
+            <ng2-smart-table  style="zoom: 0.8;"  [settings]="SettingsMesureOKD" [source]="sourceMesureOKD"></ng2-smart-table>
   
           </nb-card-body>
   
